Web Inspector: Styles Redesign: make selector field inline-block when editing https://bugs.webkit.org/show_bug.cgi?id=179588 <rdar://problem/35490915>
Reviewed by Brian Burg.

* UserInterface/Views/SpreadsheetCSSStyleDeclarationSection.css:
(.spreadsheet-css-declaration .header.editing-selector .origin):
When the selector field is multiline, it covers the source link entirely.
When the selector field takes only one line, the source link remains where it was before editing.

(.spreadsheet-css-declaration .selector):
Make it `position: relative` to cover the source link.

(.spreadsheet-css-declaration .selector.spreadsheet-selector-field.editing):
* UserInterface/Views/SpreadsheetCSSStyleDeclarationSection.js:
(WI.SpreadsheetCSSStyleDeclarationSection.prototype.initialLayout):


Canonical link: https://commits.webkit.org/195655@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224768 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/SpreadsheetCSSStyleDeclarationSection.css
+++ b/Source/WebInspectorUI/UserInterface/Views/SpreadsheetCSSStyleDeclarationSection.css
@@ -39,6 +39,11 @@
     padding: 0 var(--css-declaration-side-padding);
 }
 
+.spreadsheet-css-declaration .header.editing-selector .origin {
+    position: absolute;
+    right: var(--css-declaration-side-padding);
+}
+
 .spreadsheet-css-declaration .media-label {
     color: black;
 }
@@ -75,6 +80,10 @@
     float: right;
 }
 
+.spreadsheet-css-declaration .selector {
+    position: relative;
+}
+
 .spreadsheet-css-declaration .selector.style-attribute {
     font: 12px sans-serif;
     color: hsl(0, 0%, 30%);
@@ -105,6 +114,7 @@
 }
 
 .spreadsheet-css-declaration .selector.spreadsheet-selector-field.editing {
+    display: inline-block;
     box-shadow: hsla(0, 0%, 0%, 0.5) 0 1px 3px;
     outline: none !important;
 }
